Fix overflow on the sidebar

--- a/css/styles.css
+++ b/css/styles.css
@@ -157,6 +157,7 @@ ul {
   float: right;
   margin-left: auto;
   margin-right: auto;
+  overflow: scroll;
 }
 
 #endGame {
